fix grid sizing to avoid need for text align

--- a/site/styles/_footer.scss
+++ b/site/styles/_footer.scss
@@ -52,8 +52,8 @@ footer {
 
 .footer-social-media-icons {
   display: grid;
-  gap: 16px;
-  grid-auto-columns: 32px;
+  gap: 24px;
+  grid-auto-columns: 25px;
   grid-auto-flow: column;
   grid-template-rows: 1fr;
   justify-content: center;
@@ -62,9 +62,6 @@ footer {
   @include media-breakpoint-up(xl) {
     justify-content: start;
     margin: 0 50px 20px;
-    .s72-btn {
-      text-align: left;
-    }
   }
 
   .s72-btn {
